--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "moduleType": [
     "node"
   ],
-  "author":"Brian Brennan",
+  "author": "Brian Brennan",
   "license": "MIT",
   "ignore": [
     "**/.*",
@@ -14,6 +14,7 @@
   "dependencies": {
     "susy": "~2.2.2",
     "breakpoint-sass": "~2.5.0",
-    "bourbon": "~4.2.2"
+    "bourbon": "~4.2.2",
+    "slimpickin": "~0.8.2"
   }
 }
